--- a/views/content/aboutus.html
+++ b/views/content/aboutus.html
@@ -22,7 +22,7 @@
               <!-- Youtube video -->
               <!-- <iframe width="100%" height="300" src="https://www.youtube.com/embed/nSQJuONAvaw" frameborder="0" allowfullscreen></iframe> -->
               <a class="various fancybox.iframe" fancybox href="https://www.youtube.com/embed/nSQJuONAvaw?autoplay=1">
-                <img src="img/videos/suman.jpg" alt="" class="img-responsive" />
+                <img src="http://img.youtube.com/vi/nSQJuONAvaw/sddefault.jpg" alt="" class="img-responsive" />
                 <div class="circle">
                   <img src="img/play.png" alt="" class="img-responsive" />
                 </div>
