--- a/views/header.html
+++ b/views/header.html
@@ -8,9 +8,9 @@
           <div class="row">
             <div class="col-md-1 col-sm-3 col-xs-2">
               <div class="hamburger" slide-menu>
-                <span class="brand-primary-bg one"></span>
-                <span class="brand-primary-bg two"></span>
-                <span class="brand-primary-bg three"></span>
+                <a class="ham"><span class="brand-primary-bg one"></span>
+                  <span class="brand-primary-bg two"></span>
+                  <span class="brand-primary-bg three"></span></a>
               </div>
             </div>
             <div class="col-md-11 col-sm-9 col-xs-10">
