take plan changes

--- a/views/content/coolsculpting.html
+++ b/views/content/coolsculpting.html
@@ -4,94 +4,8 @@
     <h2 class="text-uppercase get-center white font-semibold">Cool Sculpting</h2>
   </div>
 
-  <div class="sculpting-one">
-    <div class="shade-one">
-      <div class="container">
-        <div class="what-sculpting">
-          <h2 class="brand-primary text-uppercase font-semibold">What is cool sculpting?</h2>
-          <p class="text-justify">The CoolSculpting procedure eliminates stubborn fat safely and effectively, without surgery or downtime. This fat reduction treatment is the only FDA-cleared procedure to use controlled cooling to safely target and eliminate diet- and exercise-resistant fat. CoolSculpting results are proven, noticeable, and lasting, so you'll look and feel great from every angle.</p>
-        </div>
-      </div>
-    </div>
+  <div class="sculpting-main">
+    <img src="img/sculpting/coolsculpting.jpg" class="img-responsive" alt="">
   </div>
 
-  <div class="sculpting-two">
-    <div class="shade-two">
-      <div class="container">
-        <div class="freeze-away">
-          <h2 class="brand-primary text-uppercase font-semibold">Freeze away fat</h2>
-          <p class="text-justify">It comes down to science. Fat cells freeze at higher temperatures than surrounding tissues.  CoolSculpting technology safely delivers precisely controlled cooling to gently and effectively target the fat cells underneath the skin. The treated fat cells are crystallized (frozen), and then die. Over time, your body naturally processes the fat and eliminates these dead cells, leaving a more sculpted you.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="sculpting-three">
-    <div class="container">
-      <div class="watch-video text-center">
-        <h2 class="brand-primary text-uppercase font-semibold">Watch the video</h2>
-        <div class="play-button round">
-          <span><i class="fa fa-play brand-primary"></i></span>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="sculpting-four">
-    <div class="shade-three">
-      <div class="container">
-        <div class="how-it-works">
-          <h2 class="brand-primary text-uppercase font-semibold">How it works?</h2>
-          <p class="text-justify">It’s easy to sit back, relax and say goodbye to stubborn fat. After we select the area(s) to be treated, the device is positioned on your body and controlled cooling is applied. During your procedure, you may choose to read, check email, or even take a nap. The CoolSculpting fat freezing procedure is completely non-surgical, so you can typically return to work and normal activities immediately. You will like what you see. In the weeks and months following your procedure, your body naturally processes the fat and eliminates these dead cells. Once the treated fat cells are gone, they're gone for good.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="sculpting-five">
-    <div class="shade-four">
-      <div class="container">
-        <div class="before-after text-center">
-          <h2 class="brand-primary text-uppercase font-semibold">Before and After</h2>
-          <!-- flexslider -->
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="sculpting-six">
-    <div class="shade-five">
-      <div class="container">
-        <div class="applicators text-center">
-          <h2 class="brand-primary text-uppercase font-semibold">Applicators</h2>
-          <!-- flexslider -->
-          <span class="block">These programs are only available at clinics in Mumbai and not online</span>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="sculpting-seven">
-    <div class="shade-six">
-      <div class="container">
-        <div class="ready">
-          <h2 class="brand-primary text-uppercase font-semibold">Are you ready?</h2>
-          <p class="text-justify">Are you ready to love every view of you? The sooner you set up your consultation, the sooner you'll see results in the mirror — long-term results in those areas that have resisted all efforts through diet and exercise.</p>
-          <p>Contact us on <a href="tel:02261312222">022-61312222</a> / <a href="tel:+919323217232">+91 - 9323217232</a> to find out if the CoolSculpting fat freezing procedure is right for you.</p>
-          <sapn class="block">Results and patient experience may vary.</sapn>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="sculpting-eight">
-    <div class="shade-seven">
-      <div class="container">
-        <div class="faq text-center">
-          <h2 class="brand-primary text-uppercase font-semibold">Frequently Asked Questions</h2>
-          <!-- flexslider -->
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+  </section>
