--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -1,3 +1,11 @@
+// MIXINS
+@mixin back($name, $size: cover, $pos: center center, $repeat: no-repeat) {
+ background-image: url('../img/#{$name}');
+ background-size: $size;
+ background-position: $pos;
+ background-repeat: $repeat;
+}
+
 // //////////////////////////////////
 // HEADER
 // //////////////////////////////////
@@ -841,4 +849,15 @@ $side-menu-width: 390px;
   &.slide-body {
     @include transform(translateX($side-menu-width));
   }
+}
+
+// Cool Sculpting
+
+.sculpting-one, .sculpting-two, .sculpting-three, .sculpting-four,
+.sculpting-five, .sculpting-six, .sculpting-seven, .sculpting-eight {
+  @include size(100%, 400px);
+}
+.sculpting-main, .nutri {
+  @include size(100%, 100%);
+  img { width: 100%; }
 }
