--- a/views/content/postpregnancy.html
+++ b/views/content/postpregnancy.html
@@ -65,7 +65,7 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
-                        <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
+                        <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
                   </div>
@@ -102,7 +102,7 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
-                        <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
+                        <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
                   </div>
@@ -142,7 +142,7 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
-                        <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
+                        <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
                   </div>
@@ -186,7 +186,7 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
-                        <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
+                        <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
                   </div>
@@ -243,7 +243,7 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
-                        <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
+                        <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
                   </div>
@@ -280,7 +280,7 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
-                        <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
+                        <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
                   </div>
@@ -320,7 +320,7 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
-                        <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
+                        <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
                   </div>
@@ -364,7 +364,7 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
-                        <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
+                        <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
                   </div>
@@ -421,7 +421,7 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
-                        <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
+                        <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
                   </div>
@@ -458,7 +458,7 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
-                        <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
+                        <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
                   </div>
@@ -498,7 +498,7 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
-                        <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
+                        <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
                   </div>
@@ -542,7 +542,7 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
-                        <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
+                        <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
                   </div>
@@ -599,7 +599,7 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
-                        <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
+                        <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
                   </div>
@@ -636,7 +636,7 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
-                        <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
+                        <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
                   </div>
@@ -676,7 +676,7 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
-                        <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
+                        <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
                   </div>
@@ -720,7 +720,7 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
-                        <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
+                        <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
                   </div>
@@ -777,7 +777,7 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
-                        <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
+                        <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
                   </div>
@@ -814,7 +814,7 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
-                        <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
+                        <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
                   </div>
@@ -854,7 +854,7 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
-                        <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
+                        <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
                   </div>
@@ -898,7 +898,7 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
-                        <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
+                        <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
                   </div>
