--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -861,3 +861,26 @@ $side-menu-width: 390px;
   @include size(100%, 100%);
   img { width: 100%; }
 }
+
+
+.alert-postion {
+  position: fixed;
+  max-width: 500px;
+  left: 50%;
+  width: 100%;
+  top: 50%;
+  @include transform(translate(-50%, -50%));
+  z-index: 99;
+  .alert {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    border: none;
+    &.alert-success {
+      color: white;
+      background-color: $brand-success;
+    }
+    &.alert-danger {
+      color: white;
+      background-color: #A94442;
+    }
+  }
+}
