--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -787,7 +787,7 @@
         margin: 0 2px -2px 0;
         a {
           width: 70px;
-          padding: 17px 0 15px;
+          // padding: 17px 0 15px;
           &:before {
             height: 34px;
           }
@@ -1291,7 +1291,7 @@
       li {
         a {
           width: 52px;
-          padding: 15px 0 13px;
+          // padding: 15px 0 13px;
           &:before {
             width: 1px;
             height: 28px;
