--- a/views/content/nutrigenomics.html
+++ b/views/content/nutrigenomics.html
@@ -3,5 +3,91 @@
     <img src="img/banners/nutrigenomics.jpg" alt="">
     <h2 class="text-uppercase get-center white font-semibold">Nutrigenomics</h2>
   </div>
-  <div class="nutri"></div>
+
+  <div class="nutri-one">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="unlock">
+            <h2 class="brand-primary text-uppercase font-semibold">Unlock your genetic potential</h2>
+            <p class="text-justify">By doing a simple once-only saliva or blood test, you can discover your DNA blueprint and learn how well your genes are matched to your present diet and lifestyle, as well as how you can unlock the full potential of your current and future
+              health and wellness.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="nutri-two">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-offset-6 col-md-6">
+          <div class="genes">
+            <p class="text-right white">Your genes may load the ‘gun’, but it is your diet, lifestyle, stress and other environmental exposures that pull the ‘trigger’ that causes disease and premature ageing</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="nutri-three">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-offset-6 col-md-6">
+          <div class="what-nutri">
+            <h2 class="brand-primary text-uppercase font-semibold">What is nutrigenomics?</h2>
+            <p class="text-justify">Synchronising our unique DNA blueprint with your diet and lifestyle, known as nutrigenomics, is the key to the exciting new realm of personalised wellness medicine.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="nutri-four">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-offset-2 col-md-8">
+          <div class="benefits text-center">
+            <h2 class="brand-primary text-uppercase font-semibold">Benefits</h2>
+            <flex-slider class="carousel" flex-slide="nutri in nutrigenomics track by $index" animation="slide">
+              <li>
+                <div class="nutri-benefit">
+                  <h4>{{nutri.qts}}</h4>
+                  <p>{{nutri.ans}}</p>
+                </div>
+              </li>
+            </flex-slider>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="nutri-five">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-offset-6 col-md-6">
+          <div class="doctor">
+            <p class="text-justify">Our goal is to help you to reach your health potential and live the healthiest life possible, while helping you to reduce the risk of many of the most common health issues that affect us through life and as we age.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="nutri-six">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="contact">
+            <h2 class="brand-primary text-uppercase font-semibold">Contact us</h2>
+            <p>A simple once-only saliva or blood test that will change the course of your life so contact us on
+              <span class="block brand-primary font-semibold"><a href="tel:02261312222" class="brand-primary">022 6131 2222</a> / <a href="tel:+919323217232" class="brand-primary">+91 93232 17232</a></span>
+              to get started.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
