team image fixed

--- a/sass/_mobile_harsh.scss
+++ b/sass/_mobile_harsh.scss
@@ -358,6 +358,7 @@
       font-size: 20px;
     }
   }
+  .various .circle { width: 7%; }
 }
 @media (max-width: 480px) {
   .various .circle { width: 10%; }
