--- a/views/content/team.html
+++ b/views/content/team.html
@@ -15,8 +15,8 @@
       <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
-            <div class="member-image">
-              <img src="img/team/vibha.jpg" alt="" class="img-responsive">
+            <div class="member-image round">
+              <img src="img/team/vibha.jpg" alt="" class="img-responsive round">
             </div>
           </div>
 
@@ -35,8 +35,8 @@
       <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
-            <div class="member-image">
-              <img src="img/team/adity.jpg" alt="" class="img-responsive">
+            <div class="member-image round">
+              <img src="img/team/adity.jpg" alt="" class="img-responsive round">
             </div>
           </div>
 
@@ -54,8 +54,8 @@
       <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
-            <div class="member-image">
-              <img src="img/team/deepti.jpg" alt="" class="img-responsive">
+            <div class="member-image round">
+              <img src="img/team/deepti.jpg" alt="" class="img-responsive round">
             </div>
           </div>
 
@@ -73,8 +73,8 @@
       <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
-            <div class="member-image">
-              <img src="img/team/nidhi.jpg" alt="" class="img-responsive">
+            <div class="member-image round">
+              <img src="img/team/nidhi.jpg" alt="" class="img-responsive round">
             </div>
           </div>
 
@@ -91,8 +91,8 @@
       <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
-            <div class="member-image">
-              <img src="img/team/shaikh.jpg" alt="" class="img-responsive">
+            <div class="member-image round">
+              <img src="img/team/shaikh.jpg" alt="" class="img-responsive round">
             </div>
           </div>
 
@@ -111,8 +111,8 @@
       <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
-            <div class="member-image">
-              <img src="img/team/vishakha.jpg" alt="" class="img-responsive">
+            <div class="member-image round">
+              <img src="img/team/vishakha.jpg" alt="" class="img-responsive round">
             </div>
           </div>
 
@@ -131,8 +131,8 @@
       <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
-            <div class="member-image">
-              <img src="img/team/vaishali.jpg" alt="" class="img-responsive">
+            <div class="member-image round">
+              <img src="img/team/vaishali.jpg" alt="" class="img-responsive round">
             </div>
           </div>
 
@@ -151,8 +151,8 @@
       <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
-            <div class="member-image">
-              <img src="img/team/pameli.jpg" alt="" class="img-responsive">
+            <div class="member-image round">
+              <img src="img/team/pameli.jpg" alt="" class="img-responsive round">
             </div>
           </div>
 
@@ -171,8 +171,8 @@
       <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
-            <div class="member-image">
-              <img src="img/team/neha.jpg" alt="" class="img-responsive">
+            <div class="member-image round">
+              <img src="img/team/neha.jpg" alt="" class="img-responsive round">
             </div>
           </div>
 
@@ -197,8 +197,8 @@
       <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
-            <div class="member-image">
-              <img src="img/team/smriti.jpg" alt="" class="img-responsive">
+            <div class="member-image round">
+              <img src="img/team/smriti.jpg" alt="" class="img-responsive round">
             </div>
           </div>
 
@@ -216,8 +216,8 @@
       <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
-            <div class="member-image">
-              <img src="img/team/hiral.jpg" alt="" class="img-responsive">
+            <div class="member-image round">
+              <img src="img/team/hiral.jpg" alt="" class="img-responsive round">
             </div>
           </div>
 
@@ -234,8 +234,8 @@
       <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
-            <div class="member-image">
-              <img src="img/team/shwetal.jpg" alt="" class="img-responsive">
+            <div class="member-image round">
+              <img src="img/team/shwetal.jpg" alt="" class="img-responsive round">
             </div>
           </div>
 
@@ -253,8 +253,8 @@
       <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
-            <div class="member-image">
-              <img src="img/team/jahnavi.jpg" alt="" class="img-responsive">
+            <div class="member-image round">
+              <img src="img/team/jahnavi.jpg" alt="" class="img-responsive round">
             </div>
           </div>
 
@@ -272,8 +272,8 @@
       <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
-            <div class="member-image">
-              <img src="img/team/cinthia.jpg" alt="" class="img-responsive">
+            <div class="member-image round">
+              <img src="img/team/cinthia.jpg" alt="" class="img-responsive round">
             </div>
           </div>
 
@@ -291,8 +291,8 @@
       <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
-            <div class="member-image">
-              <img src="img/team/kadambari.jpg" alt="" class="img-responsive">
+            <div class="member-image round">
+              <img src="img/team/kadambari.jpg" alt="" class="img-responsive round">
             </div>
           </div>
 
@@ -311,8 +311,8 @@
       <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
-            <div class="member-image">
-              <img src="img/team/kabita.jpg" alt="" class="img-responsive">
+            <div class="member-image round">
+              <img src="img/team/kabita.jpg" alt="" class="img-responsive round">
             </div>
           </div>
 
@@ -330,8 +330,8 @@
       <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
-            <div class="member-image">
-              <img src="img/team/nanditha.jpg" alt="" class="img-responsive">
+            <div class="member-image round">
+              <img src="img/team/nanditha.jpg" alt="" class="img-responsive round">
             </div>
           </div>
 
@@ -349,8 +349,8 @@
       <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
-            <div class="member-image">
-              <img src="img/team/adity.jpg" alt="" class="img-responsive">
+            <div class="member-image round">
+              <img src="img/team/adity.jpg" alt="" class="img-responsive round">
             </div>
           </div>
 
