--- a/views/header.html
+++ b/views/header.html
@@ -18,7 +18,12 @@
                 <h1>
                   <a href="#/home">
                     <img src="img/logo.png" alt="">
-                    <span class="font-baubodi">for</span> Health &amp; Immunity
+                    <span class="font-baubodi">for</span>Aliment Control
+                    <!-- <flex-slider class="carousel slide" flex-slide="list in health" animation="fade" direction-Nav="false" control-Nav="false" playText="Play" animationSpeed="100" slideshowspeed="100">
+                      <li>
+                        <span>{{list}}</span>
+                      </li>
+                    </flex-slider> -->
                   </a>
                 </h1>
               </div>
@@ -42,12 +47,12 @@
                   </ul>
                 </div>
               </div>
-              <div class="col-md-3 col-sm-4">
+              <div class="col-md-3 col-sm-4 col-xs-12">
                 <div class="contact-tel letter-space">
                   <a class="font-semibold" href="tel:+912261312222">+91 22 6131 2222</a>
                 </div>
               </div>
-              <div class="col-md-3 col-sm-3">
+              <div class="col-md-3 col-sm-3 col-xs-12">
                 <div class="signin letter-space text-right" ng-show="!enablelogout">
                   <a class="text-uppercase font-semibold" href="" ng-click="openLogin();">Sign In</a>
                 </div>
