--- a/views/content/home.html
+++ b/views/content/home.html
@@ -52,7 +52,7 @@
         <div class="health-info">
           <h3 class="brand-blue title text-uppercase font-gotham-bold">cool <span class="block">sculpting</span></h3>
           <p class="text-justify health-descp">The CoolSculpting procedure eliminates stubborn fat safely and effectively, without surgery or downtime. This fat reduction treatment is the only FDA-cleared procedure.</p>
-          <button class="btn btn-blue text-uppercase font-gotham-bold letter-space know-more">know more</button>
+          <a href="#/coolsculpting" class="btn btn-blue text-uppercase font-gotham-bold letter-space know-more">know more</a>
           <div class="health-imgholder">
             <img src="img/cool-sculpting.png" alt="" class="img-responsive">
           </div>
@@ -131,16 +131,16 @@
             </div>
             <div class="col-md-6">
               <div class="view-detail relate">
+                <div class="get-round weight-info text-center">
+                <span class="text-uppercase brand-brown-dark-bg lost">Lost</span>
+                <p>
+                  <span class="weight-number font-vista">{{slide.weight}}</span>kgs
+                </p>
+              </div>
                 <h4 class="text-left brand-brown-dark name font-semibold letter-space">{{slide.name}}</h4>
                 <span class="text-left block brand-primary letter-space">{{slide.location}}</span>
                 <div class="descp brand-primary">
                   <p class="text-justify">{{slide.descp}}</p>
-                </div>
-                  <div class="get-round weight-info text-center">
-                  <span class="text-uppercase brand-brown-dark-bg lost">Lost</span>
-                  <p>
-                    <span class="weight-number font-vista">{{slide.weight}}</span>kgs
-                  </p>
                 </div>
               </div>
             </div>
@@ -288,9 +288,6 @@
           </form>
           <div class="text-center" ng-show="asksumanForm.$invalid && asksumanForm.category.$touched && asksumanForm.name.$touched && asksumanForm.email.$touched && asksumanForm.question.$touched" alert="role">
             Please enter all details
-          </div>
-          <div class="text-center" ng-show="submitted" alert="role">
-            Your query has been sent.
           </div>
           <div class="text-right btn-center">
             <button class="text-uppercase btn btn-primary btn-more" type="submit" ng-click="askSumanSubmit(asksuman,asksumanForm)">Submit</button>
