--- a/views/content/weightmanagement.html
+++ b/views/content/weightmanagement.html
@@ -319,7 +319,7 @@
           <uib-carousel interval="myInterval" no-wrap="noWrapSlides">
             <uib-slide ng-repeat="slide in weightinfo" active="slide.active">
               <div class="row">
-                <div class="col-md-6 col-sm-6">
+                <div class="col-md-6">
                   <div class="story-video">
                     <!-- <iframe width="100%" height="300" src="https://www.youtube.com/embed/dnmzOqhu62k" frameborder="0" allowfullscreen></iframe> -->
                     <a class="various fancybox.iframe" fancybox href="{{slide.link}}">
@@ -330,18 +330,18 @@
                     </a>
                   </div>
                 </div>
-                <div class="col-md-6 col-sm-6">
+                <div class="col-md-6">
                   <div class="view-detail relate">
-                    <h4 class="text-left brand-brown-dark name font-semibold letter-space">{{slide.name}}</h4>
-                    <span class="text-left block brand-primary letter-space">{{slide.location}}</span>
-                    <div class="descp brand-primary">
-                      <p class="text-justify">{{slide.descp}}</p>
-                    </div>
                     <div class="get-round weight-info text-center">
                       <span class="text-uppercase brand-brown-dark-bg lost">Lost</span>
                       <p>
                         <span class="weight-number">{{slide.weight}}</span>kgs
                       </p>
+                    </div>
+                    <h4 class="text-left brand-brown-dark name font-semibold letter-space">{{slide.name}}</h4>
+                    <span class="text-left block brand-primary letter-space">{{slide.location}}</span>
+                    <div class="descp brand-primary">
+                      <p class="text-justify">{{slide.descp}}</p>
                     </div>
                   </div>
                 </div>
