--- a/views/content/productdetail.html
+++ b/views/content/productdetail.html
@@ -4,6 +4,9 @@
   </div>
 
   <div class="container">
+    <div class="alert-postion">
+            <uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)" class="text-center" dismiss-on-timeout="5000">{{alert.msg}}</uib-alert>
+        </div>
     <div class="product-detail">
       <div class="row">
         <div class="col-md-6">
