--- a/views/content/healthproducts.html
+++ b/views/content/healthproducts.html
@@ -13,6 +13,9 @@
 
   <div class="products">
     <div class="container">
+      <div class="alert-postion">
+              <uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)" class="text-center" dismiss-on-timeout="5000">{{alert.msg}}</uib-alert>
+          </div>
       <div class="row">
 
         <div class="col-md-3 col-sm-4">
