--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -164,7 +164,7 @@
         }
       }
     }
-    .nutri {
+    .about-nutri {
       @include margin(57px 0 0);
       h3 { vertical-align: 15px; }
     }
