--- a/views/content/aboutus.html
+++ b/views/content/aboutus.html
@@ -99,7 +99,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="we-do-topics">
-            <div class="we-do-title nutri">
+            <div class="we-do-title about-nutri">
               <img src="img/about/dna.png" alt="" class="img-responsive">
               <h3 class="text-uppercase brand-primary font-semibold"><a href="#/nutrigenomics" class="brand-primary">Nutrigenomics</a></h3>
             </div>
