--- a/sass/main.scss
+++ b/sass/main.scss
@@ -779,6 +779,7 @@ button {
   p {
     margin: 0;
   }
+  .lost { padding: 14px 0 2px; }
 }
 // .health-tab {
 //   .tab-chart { width: 83%; }
@@ -916,7 +917,7 @@ button {
   }
 }
 .weight .tab-chart .nav-tabs li a {
-  @include size(190px, auto);
+  // @include size(190px, auto);
   padding: 12px 0 0;
 }
 
